# dcfldd

./: AUTHORS  CONTRIBUTING.md  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  argmatch.c  autogen.sh  config.h.in  configure  configure.ac  configure.in  copy.c  copy.h  dcfldd.1  dcfldd.c  dcfldd.h  depcomp  full-write.h  hash.c  hash.h  hashformat.c  md5.c  md5.h  missing  mkinstalldirs  output.c  output.h  pattern.c  pattern.h  sha1.h  sizeprobe.c  sizeprobe.h  split.c  split.h  sys2.h  translate.c  util.c  (+4 more)
.github/workflows/: .gitignore  ccpp.yml  expected-stderr.txt  full-check.yml  man_page_in_sync.yml  release-tarball.yml  test.txt
branches/fsf/dcfldd/: README  hash.h  pattern.h  sha2.h  sys2.h  util.c
dcfldd/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  config.h  config.h.in  configure  configure.in  copy.c  copy.h  dcfldd.1  dcfldd.c  dcfldd.h  full-write.h  hash.c  hash.h  hashformat.h  human.c  log.c  log.h  md5.h  output.c  output.h  pattern.c  pattern.h  random.c  sha1.c  sha2.c  sha2.h  sizeprobe.c  sizeprobe.h  split.c  system.h  translate.c  translate.h  util.c  util.h  verify.c
doc/: Makefile.in  UPDATE-CHECK  dcfldd-bash_completion  fileutils.info  fileutils.texi  version.texi
intl/: ChangeLog  bindtextdom.c  finddomain.c  gettextP.h  l10nflist.c  libgettext.h  localealias.c  textdomain.c
lib/: Makefile.in  getdate.c
m4/: Makefile.in
man/: GNUmakefile  Makefile.am  Makefile.in  Makefile.maint  Makefile.summ  create-man.sh  dcfldd.1  dcfldd.txt
po/: POTFILES.in  cat-id-tbl.c  cs.gmo  cs.po  da.gmo  da.po  dcfldd.pot  de.gmo  de.po  el.gmo  el.po  es.gmo  es.po  fr.gmo  fr.po  gl.gmo  gl.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  nl.gmo  nl.po  no.gmo  no.po  pl.gmo  pl.po  pt.gmo  pt.po  pt_BR.gmo  pt_BR.po  ru.gmo  ru.po  sk.gmo  sk.po  sl.gmo  sl.po  sv.gmo  (+3 more)
src/: Makefile.am  Makefile.in  ansi2knr.c  argmatch.c  argmatch.h  copy.c  copy.h  dcfldd.c  dcfldd.h  dcfldd_error.c  dcfldd_error.h  error.c  error.h  full-write.c  full-write.h  hash.c  hash.h  hashformat.c  hashformat.h  human.c  log.c  log.h  long-options.c  long-options.h  md5.c  md5.h  output.c  output.h  pathmax.h  pattern.c  pattern.h  safe-read.c  sha1.c  sha1.h  sha2.c  sha2.h  sizeprobe.c  sizeprobe.h  split.c  split.h  (+15 more)
tags/start/dcfldd/: AUTHORS  config.h  sha1.h  split.h
tests/: Fetish.pm  Makefile.am  Makefile.in
tests/dd/: Makefile.in
trunk/dcfldd/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  configure  configure.in  dcfldd.1  dcfldd.c  dcfldd.h  full-write.c  hashformat.c  log.c  log.h  output.c  output.h  pattern.c  random.h  sizeprobe.c  split.c  system.h  translate.c  util.c  util.h
