bin_PROGRAMS = dcfldd

dcfldd_SOURCES = dcfldd.c md5.c md5.h sha1.c sha1.h sha2.c sha2.h human.c human.h \
getpagesize.h long-options.c long-options.h safe-read.c safe-read.h xstrtol.c \
xstrtol.h version-etc.c version-etc.h \
system.h sys2.h pathmax.h xalloc.h argmatch.c argmatch.h xstrtoul.c \
full-write.c xstrtoumax.c

man_MANS = dcfldd.1

EXTRA_DIST = $(man_MANS)
