dnl Process this file with autoconf to produce a configure script. -*-m4-*-
AC_INIT(dcfldd.c)
AM_CONFIG_HEADER(config.h)
AC_CANONICAL_HOST

AM_INIT_AUTOMAKE([dcfldd], [1.2.1])

AC_PROG_CC
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_HEADER_STDC

AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T

AC_OUTPUT(Makefile)
