bin_PROGRAMS = dcfldd

dcfldd_SOURCES = dcfldd.c \
                 md5.c md5.h \
                 sha1.c sha1.h \
                 sha2.c sha2.h \
                 human.c human.h \
                 getpagesize.h \
                 long-options.c long-options.h \
                 safe-read.c safe-read.h \
                 xstrtol.c xstrtol.h \
                 version-etc.c version-etc.h \
                 system.h sys2.h pathmax.h xalloc.h \
                 argmatch.c argmatch.h \
                 xstrtoul.c \
                 full-write.c \
                 xstrtoumax.c \
                 copy.c copy.h \
                 dcfldd.h \
                 hash.h hash.c \
                 verify.c verify.h \
                 translate.c translate.h \
                 sizeprobe.c sizeprobe.h \
                 pattern.c pattern.h \
                 util.c util.h \
                 log.c log.h \
                 full-write.h \
                 output.c output.h \
                 split.c split.h \
                 hashformat.c hashformat.h
