# configure.ac, was previously configure.in (before 2019)
#
# Copyright ?-2002    Jim Meyering <jim@meyering.net>
# Copyright 2002-2006 Nicholas Harbour <nicholasharbour@yahoo.com>
# Copyright 2019      Joao Eriberto Mota Filho <eriberto@eriberto.pro.br>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along
# with this program; if not, write to the Free Software Foundation, Inc.,
# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.

bin_PROGRAMS = dcfldd

AM_CFLAGS = -fgnu89-inline

dcfldd_SOURCES = dcfldd.c \
                 md5.c md5.h \
                 sha1.c sha1.h \
                 sha2.c sha2.h \
                 human.c human.h \
                 getpagesize.h \
                 long-options.c long-options.h \
                 safe-read.c safe-read.h \
                 xstrtol.c xstrtol.h \
                 version-etc.c version-etc.h \
                 system.h sys2.h pathmax.h xalloc.h \
                 argmatch.c argmatch.h \
                 xstrtoul.c \
                 full-write.c \
                 xstrtoumax.c \
                 copy.c copy.h \
                 dcfldd.h \
                 hash.h hash.c \
                 verify.c verify.h \
                 translate.c translate.h \
                 sizeprobe.c sizeprobe.h \
                 pattern.c pattern.h \
                 util.c util.h \
                 log.c log.h \
                 full-write.h \
                 output.c output.h \
                 split.c split.h \
                 hashformat.c hashformat.h
